--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 </footer>
 
 
-
-<script> src="index.js" </script>
+<script> type="text/javascript"; src="config.js"</script>
+<script> type="text/javascript"; src="index.js" </script>
 <script src="https://kit.fontawesome.com/4c2638160f.js" crossorigin="anonymous"></script>
 
 
